2003-01-13  Alexandre Duret-Lutz  <adl@gnu.org>

	* tests/gnits2.test, tests/pr300-prog.test, tests/transform.test:
	Move all `test -f' into Makefiles, so we can honor $(EXEEXT) when
	testing for programs.
	Reported by Richard Dawe.

2003-01-10  Alexandre Duret-Lutz  <adl@gnu.org>

	* Makefile.am (maintainer-check): Suggest using $sleep instead of
	sleep 2.
	* tests/defs.in (sleep): New variable.
	* tests/asm.test, tests/confsub.test, tests/lisp3.test,
	tests/texinfo16.test, tests/warnopts.test, tests/yaccvpath.test:
	Use $sleep instead of sleep 2, to work around timestamp
	inconsistencies in Windows.
	Reported by Richard Dawe.

	* Makefile.am (maintainer-check): Do not require SHELL=/bin/sh
	after $MAKE -e.
	* tests/ansi3.test, tests/ansi5.test, tests/cond22.test,
	tests/man2.test, tests/subobj3.test, tests/suffix8.test,
	tests/suffix11.test: Do not set SHELL=/bin/sh after $MAKE -e.
	$SHELL is overridden by tests/defs, so it won't hurt even
	if $MAKE -e uses the $SHELL envvar.
	* tests/ansi.test, tests/insh2.test, tests/texinfo.test,
	tests/texinfo8.test: Use SHELL=$SHELL, not SHELL=/bin/sh.
	Reported by Richard Dawe.

	Build elisp files all at once instead of one by one.
	* automake.in (handle_emacs_lisp): Define am__ELFILES.  Add
	elc-stamp to all's dependencies.
	* lib/am/lisp.am (elc-stamp): New rule, build all *.elc files.
	(.el.elc): Rewrite to call elc-stamp if $@ doesn't exist.
	(clean-lisp): Clean elc-stamp.
	* lib/elisp-comp: Reindent.  Erase the temporatry directory
	from a trap.  Propagate Emacs's exit status.
	* tests/lisp3.test: New file.
	* tests/Makefile.am (TESTS): Add lisp3.test.
	Reported by Ryan T. Sammartino.

2003-01-09  Akim Demaille  <akim@epita.fr>

	* automake.texi: Prefer $(FOO) to @FOO@ in the documentation.

2003-01-08  Alexandre Duret-Lutz  <adl@gnu.org>

	* m4/lispdir.m4: Register EMACS and EMACSLOADPATH as precious
	variables.  Suggested by Ryan T. Sammartino.

2003-01-05  Alexandre Duret-Lutz  <adl@gnu.org>
