@@ -1,5 +1,17 @@
 2003-01-13  Alexandre Duret-Lutz  <adl@gnu.org>
 
+	Use `_dirstamp' when the file-system doesn't support `.dirstamp'.
+	* m4/lead-dot.m4: New file.
+	* m4/Makefile.am (dist_m4data_DATA): Add lead-dot.m4
+	* m4/init.m4 (AM_INIT_AUTOMAKE): Require AM_SET_LEADING_DOT.:
+	* m4/depend.m4 (AM_SET_DEPDIR): Require AM_SET_LEADING_DOT. Define
+	DEPDIR using am__leading_dot.
+	* automake.in (require_build_directory): Define am__dirstamp, a new
+	variable for the dirstamp basename, based on am__leading_dot.
+	* tests/subobj6.test: Move all `test -f' into Makefiles, so we can
+	use $(am__dirstamp).
+	Reported by Richard Dawe.
+
 	* tests/gnits2.test, tests/pr300-prog.test, tests/transform.test:
 	Move all `test -f' into Makefiles, so we can honor $(EXEEXT) when
 	testing for programs.
